# yica-yirage

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  BUILD_INSTRUCTIONS.html  CHANGELOG.md  CMakeLists-modular.txt  CMakeLists-self-contained.txt  CMakeLists-working.txt  CMakeLists-yica-cpu.txt  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.html  DEPLOYMENT_STATUS.html  LICENSE  README-Docker-GPU.md  README-YICA-CPU-BUILD.md  README.html  README.md  README_YICA.md  RELEASE_REPORT_1.0.0-beta.md  REPOSITORY_STRUCTURE.md  SETUP_GITHUB_REPO.md  USAGE.html  YICA-Docker部署使用文档.md  YICA-MIRAGE-INTEGRATION-PLAN.md  YICA-快速参考.md  YICA-部署报告.md  YICA_RL_IMPLEMENTATION_SUMMARY.md  build-yica-cpu.sh  build_yica_backend.sh  build_yica_test.sh  cuda-kernels-optimise.md  demo_yica_advanced_features.py  demo_yica_benchmark.py  demo_yica_comprehensive_benchmark.py  demo_yica_distributed_training.py  demo_yica_end_to_end.py  demo_yica_optimization.py  (+31 more)
.doctrees/: BUILD_INSTRUCTIONS.doctree  DEPLOYMENT.doctree  DEPLOYMENT_STATUS.doctree  README.doctree  USAGE.doctree  index.doctree
.doctrees/api/: README.doctree  analyzer.doctree
.doctrees/architecture/: README.doctree  implementation-summary.doctree  mirage-extension.doctree  mirage-integration-plan.doctree  mirage-updates.doctree  modular-architecture.doctree  yirage-architecture.doctree
.doctrees/deployment/: README.doctree  docker-deployment.doctree  qemu-setup.doctree
.doctrees/design/: README.doctree  build_system_redesign.doctree  compatibility_layer_enhancement.doctree  testing_framework_design.doctree
.doctrees/development/: README.doctree
.doctrees/getting-started/: README.doctree  design-philosophy.doctree  quick-reference.doctree
.doctrees/project-management/: README.doctree  backend-integration.doctree  execution-plan.doctree  roadmap.doctree
.doctrees/tutorials/: README.doctree
.github/workflows/: deploy-docs.yml  docs.yml  release.yml
_sources/: BUILD_INSTRUCTIONS.md.txt  DEPLOYMENT.md.txt  README.md.txt  USAGE.md.txt
_sources/architecture/: mirage-extension.md.txt  modular-architecture.md.txt
_sources/design/: configuration_management_system.md.txt  deployment_packaging_strategy.md.txt  (+1 more)
api/: README.html  analyzer.html  cpp-api-real.html  cpp-api-verified.html  python-api.html
architecture/: README.html  implementation-summary.html  mirage-extension.html  mirage-integration-plan.html  mirage-updates.html  modular-architecture.html  yica-architecture-detailed.html  yica-architecture.html  yirage-architecture.html  yirage-extension.html
build_yica_tests/: yica_hardware_tests
cmake/: yica.cmake
deployment/: README.html  deployment-report.html  docker-deployment.html  qemu-setup.html
design/: README.html  build_system_redesign.html  compatibility_layer_enhancement.html  configuration_management_system.html  deployment_packaging_strategy.html  error_handling_logging_system.html  testing_framework_design.html
development/: README.html  troubleshooting-guide.html
docker/: Dockerfile.yica-cpu  Dockerfile.yica-gpu  Dockerfile.yica-production  Dockerfile.yica-qemu  docker-compose.yica-cpu.yml  docker-compose.yica-gpu.yml  run-yica-cpu.sh  run-yica-gpu.sh  start-yica-qemu.sh
docs/: COMPREHENSIVE-TEST-REPORT.md  DESIGN-PHILOSOPHY.md  FIX-SUMMARY.md  Makefile  README-Docker-CPU.md  README-FLEXIBLE-DISTRIBUTION.md  README.md  USAGE.md  YICA-MIRAGE-SUCCESS-SUMMARY.md  YICA_BACKEND_INTEGRATION_SUCCESS_REPORT.md  YICA_COMPREHENSIVE_TEST_REPORT.md  YICA_NEXT_PHASE_ROADMAP.md  YICA_TASKS_EXECUTION_PLAN.md  YICA_TEST_SUITE_SUMMARY.md  build_docs.sh  conf.py  deploy.sh  deploy_manual.sh  index.rst  requirements-simple.txt  requirements.txt  yica_demo_report.json  yica_demo_report.txt  yica_integration_report.json
examples/: simple_yica_test.py  yica_neural_network_experiments.py
getting-started/: README.html  design-philosophy.html  quick-reference.html
good-kernels/: README.md
mirage/: CMakeLists.txt
mirage/tests/yica/: CMakeLists.txt  test_code_generator.cc  test_runtime_optimizer.cc  test_strategy_library.cc  test_yica_analyzer.cc
project-management/: README.html  backend-integration.html  execution-plan.html  implementation-analysis.html  roadmap.html
scripts/: deploy_yica_g100_amd.sh  docker_yica_deployment.sh  enhanced_yirage_build.sh  remote_yica_deployment.sh  run_yica_benchmarks.sh  start_yica_test.sh  validate_yica_performance.sh  yica_docker_manager.sh  yica_performance_test.sh  yirage_build.sh
src/: yica_analyzer.cpp  yica_analyzer.h  yica_cpu_backend.cc  yica_gpu_backend.cc  yica_hardware_backend.cc  yica_optimizer_core.cc  yica_optimizer_tests.cc  yica_optimizer_tool.cc
tests/: README.md  run_yica_tests.sh  test_full_environment.py  test_simple.c  test_yica_analyzer.cpp  test_yica_integration.py  yica_architecture_comparison.py  yica_backend_integration_test.py  yica_backend_simple_validation.py  yica_basic_benchmarks.py  yica_comprehensive_test_suite.py  yica_integration_test.py  yica_real_comparison_test.py
tests/cpu/: CMakeLists-working.txt  CMakeLists.txt
tests/gpu/: CMakeLists.txt
tests/hybrid/: CMakeLists.txt
tests/yica/: CMakeLists.txt  README.md  test_bandwidth_optimization.cc  test_cim_array_optimizer.cc  test_cim_mapping.cc  test_cim_operations.cc  test_cim_scheduling.cc  test_compute_in_memory.cc  test_data_locality.cc  test_energy_optimization.cc  test_framework.h  test_main.cc  test_spm_allocation.cc  test_spm_coherence.cc  test_spm_operations.cc  test_spm_optimizer.cc  test_yccl_collective.cc  test_yccl_operations.cc  test_yccl_p2p.cc  test_yica_all_reduce.cc  test_yica_basic.cc  test_yica_benchmark.cc  test_yica_device_manager.cc  test_yica_element_ops.cc  test_yica_hardware_abstraction.cc  test_yica_matmul.cc  test_yica_memory_manager.cc  test_yica_performance.cc  test_yica_power_efficiency.cc  test_yica_reduction.cc  test_yica_rms_norm.cc  test_yis_execution.cc  test_yis_instruction_generator.cc  test_yis_optimizer.cc  test_yis_verification.cc
tutorials/: README.html  performance-benchmarks.html  real-world-examples.html
(+253 files in other folders)
